# debug-led

./: Cargo.toml  LICENSE-MIT  README.md  diagram.json  wokwi.toml
examples/: esp32s3_ssd1306.rs  explicit_crash.rs  i2c_display.rs  serial_crash.rs
src/: lib.rs  reports.rs
